--- a/general_style.css
+++ b/general_style.css
@@ -1,3 +1,10 @@
 body {
     background-color: rgb(143, 143, 189);
+    background-image: url("./assets/images/background_image.png");
+}
+
+.wiev {
+    display: flex;
+    justify-content: space-between;
+
 }
