--- a/styles/style.css
+++ b/styles/style.css
@@ -12,4 +12,14 @@
 .content__details-title {
   background-image: url("../assets/images/svg/circle.svg");
   background-repeat: no-repeat;
+}
+
+.content-down {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+.content-down__images {
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
