--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,3 +20,14 @@
         background-repeat: no-repeat;
     }
 }
+
+.content-down {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+    &__images {
+        display: flex;
+        justify-content: space-between;
+    }
+}
