--- a/styles/style.scss
+++ b/styles/style.scss
@@ -31,3 +31,68 @@
         justify-content: space-between;
     }
 }
+
+.content__centr {
+    display: flex;
+    justify-content: space-between;
+
+        &-centr__spin {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; 
+        position: relative; 
+    }
+}
+
+.content__centr-centr__spin {
+    height: 100%
+}
+
+
+.image-container {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-container img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%; 
+}
+
+
+.smallest {
+    width: 100px;
+    height: 100px;
+}
+
+.smaller {
+    width: 100px;
+    height: 100px;
+}
+
+.medium {
+    width: 350px;
+    height: 350px;
+}
+
+.larger {
+    width: 300px;
+    height: 300px;
+}
+
+.largest {
+    width: 350px;
+    height: 350px;
+}
+
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
