--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .content {
   height: 900px;
 }
@@ -14,16 +13,30 @@
   position: relative;
   width: 82px;
   height: 82px;
+  top: 32px;
 }
 .content__details-title__circle-letter {
-  position: absolute; /* Абсолютное позиционирование элемента с буквой */
-  top: 50%; /* Размещаем по центру */
+  position: absolute;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .content__details-title__circle img {
   width: 100%;
   height: auto;
+}
+.content__details_title-centr {
+  display: flex;
+  margin: 30px 0px;
+}
+.content__details_title-centr_white-title {
+  margin-left: 10px;
+}
+
+.content__details_center-block {
+  width: 470px;
+  display: flex;
+  grid-gap: 20px;
 }
 
 .content-down {
