--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@
 .content__centr {
   display: flex;
   justify-content: space-between;
+  margin-top: 150px;
 }
 .content__centr-centr__spin {
   display: flex;
@@ -59,6 +60,28 @@
   align-items: center;
   height: 100vh;
   position: relative;
+}
+.content__centr-centr__spin-arrow img {
+  height: 300px;
+  width: 300px;
+}
+.content__centr-btn {
+  display: block;
+  position: relative;
+  margin: 50px auto;
+  width: 350px;
+  height: 88px;
+  border-radius: 10px;
+  background: linear-gradient(180deg, #ec1f01 0%, #b31700 100%);
+  box-shadow: 0px 4px 10px 0px rgba(227, 30, 1, 0.85);
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 33px */
+  text-transform: uppercase;
 }
 
 .content__centr-centr__spin {
@@ -79,9 +102,9 @@
   border-radius: 50%;
 }
 
-.smallest {
-  width: 100px;
-  height: 100px;
+.arrow {
+  position: absolute;
+  top: 0;
 }
 
 .smaller {
@@ -90,18 +113,18 @@
 }
 
 .medium {
-  width: 350px;
-  height: 350px;
+  width: 550px;
+  height: 550px;
 }
 
 .larger {
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 500px;
 }
 
 .largest {
-  width: 350px;
-  height: 350px;
+  width: 550px;
+  height: 550px;
 }
 
 .image-container img {
