--- a/styles/style.scss
+++ b/styles/style.scss
@@ -92,6 +92,11 @@
 		line-height: 110%; /* 33px */
 		text-transform: uppercase;
 	}
+
+	&-btn:hover {
+		color: black;
+		background-color: white;
+	}
 }
 
 .content__centr-centr__spin {
