--- a/styles/general_style.css
+++ b/styles/general_style.css
@@ -26,3 +26,145 @@ body {
         transform: rotate(360deg);
     }
 }
+
+
+.modal {
+    background-color: white;
+    max-width: 550px !important;
+    max-height: 850px;
+    margin-left: 35%;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal-content {
+    margin: 3px !important;
+}
+
+.modal-title {
+color: var(--red, #E21F26);
+text-align: center;
+font-family: Inter;
+font-size: 30px;
+font-style: normal;
+font-weight: 900;
+line-height: 100%; /* 30px */
+text-transform: uppercase;
+}
+
+.modal-header {
+    display: block !important;
+    background: var(--red, #E21F26);
+    color: #FFF;
+    text-align: center ;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; /* 24px */
+    text-transform: uppercase;
+}
+
+
+.modal-subtitle {
+
+color: var(--black, #212121);
+text-align: center;
+font-family: Inter;
+font-size: 28px;
+font-style: normal;
+font-weight: 900;
+line-height: 100%; /* 28px */
+text-transform: uppercase;
+}
+
+.modal-subtitle-name {
+    color: var(--black, #212121);
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; /* 20px */
+text-transform: uppercase;
+margin-top: 30px;
+margin: 10px;
+}
+
+.modal label {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.modal select,
+.modal input[type="text"],
+.modal input[type="password"] {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.modal button {
+    height: 52px;
+    width: 345px;
+    border-radius: 5px;
+    background-color: #e40000;
+    color: var(--white, #FFF);
+    text-align: center;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; 
+}
+
+.modal button:hover {
+    background-color: #cc0000;
+    cursor: pointer;
+}
+
+.modal small {
+color: var(--black, #212121);
+font-family: Inter;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; /* 12px */
+}
+
+.modal input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+
+.modal .validation-message {
+    color: red;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.modal .option-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.modal .option-buttons button {
+    width: 48%;
+    padding: 10px;
+    background-color: #e40000;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.modal .option-buttons button:hover {
+    background-color: #cc0000;
+    cursor: pointer;
+}
+
