--- a/styles/style.scss
+++ b/styles/style.scss
@@ -57,8 +57,13 @@
 
 .content__centr {
 	display: flex;
-	justify-content: space-between;
-	margin-top: 150px;
+	flex-direction: row-reverse;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: normal;
+	grid-gap: 12rem;
+	margin-top: 100px;
 
 	&-centr__spin {
 		display: flex;
@@ -96,6 +101,37 @@
 	&-btn:hover {
 		color: black;
 		background-color: white;
+	}
+
+	&-right-side,
+	&-left-side {
+		display: flex;
+	}
+
+	&-right-side pre {
+		position: absolute;
+		color: #e21f26;
+		margin-top: 30px;
+		left: 70px;
+		text-align: right;
+		font-family: Inter;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 800;
+		line-height: 130%; /* 28.6px */
+		text-transform: uppercase;
+	}
+
+	&-left-side pre {
+		color: #e21f26;
+		position: absolute;
+		margin: 30px -2rem;
+		font-family: Inter;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 800;
+		line-height: 130%; /* 28.6px */
+		text-transform: uppercase;
 	}
 }
 
