--- a/styles/general_style.css
+++ b/styles/general_style.css
@@ -29,8 +29,8 @@ body {
 
 
 .modal {
-    background-color: white;
-    max-width: 550px !important;
+
+    max-width: 550px;
     max-height: 850px;
     margin-left: 35%;
     border-radius: 8px;
