--- a/styles/style.scss
+++ b/styles/style.scss
@@ -82,7 +82,7 @@
 	&-btn {
 		display: block;
 		position: relative;
-		margin: 50px auto;
+		margin: 130px auto;
 		width: 350px;
 		height: 88px;
 		border-radius: 10px;
@@ -107,13 +107,15 @@
 	&-right-side,
 	&-left-side {
 		display: flex;
+		position: relative;
+		z-index: -1;
 	}
 
 	&-right-side pre {
 		position: absolute;
 		color: #e21f26;
 		margin-top: 30px;
-		left: 70px;
+		right: 80px;
 		text-align: right;
 		font-family: Inter;
 		font-size: 22px;
@@ -183,4 +185,107 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+$grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px, xxl: 1400px);
+
+@media (max-width: map-get($grid-breakpoints, md)) {
+	.content {
+		height: 100vh;
+		&-head {
+			width: 100%;
+		}
+	}
+	.content__details {
+		display: block;
+		justify-content: center;
+		&-title__circle {
+			width: 60px;
+			height: 60px;
+			top: 20px;
+			&-letter {
+				font-size: 14px;
+			}
+		}
+		&-title__circle img {
+			width: 100%;
+			height: auto;
+		}
+		&_title-centr {
+			display: block;
+			margin: 20px 0;
+			&_white-title {
+				margin-left: 5px;
+			}
+		}
+	}
+	.content__details_center-block {
+		width: 100%;
+		display: block;
+		grid-gap: 10px;
+	}
+	.content-down {
+		width: 100%;
+		position: relative;
+		bottom: 0;
+		&__images {
+			display: block;
+			justify-content: center;
+			margin-top: 10px;
+		}
+	}
+	.content__centr {
+		display: block;
+		flex-direction: column;
+		grid-gap: 2rem;
+		margin-top: 50px;
+		&-centr__spin {
+			height: 50vh;
+			&-arrow img {
+				height: 150px;
+				width: 150px;
+			}
+		}
+		&-btn {
+			width: 100%;
+			height: 50px;
+			font-size: 20px;
+		}
+		&-right-side,
+		&-left-side {
+			display: block;
+		}
+		&-right-side pre,
+		&-left-side pre {
+			font-size: 16px;
+			margin: 10px 0;
+		}
+	}
+	.content__centr-centr__spin {
+		height: auto;
+	}
+	.image-container {
+		width: 100%;
+		height: auto;
+	}
+	.image-container img {
+		width: 100%;
+		height: auto;
+	}
+	.smaller {
+		width: 50px;
+		height: 50px;
+	}
+	.medium {
+		width: 100px;
+		height: 100px;
+	}
+	.larger {
+		width: 200px;
+		height: 200px;
+	}
+	.largest {
+		width: 250px;
+		height: 250px;
+	}
 }
